--- a/client/app.json
+++ b/client/app.json
@@ -3,12 +3,13 @@
     "pages/home/home",
     "pages/details/details",
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/addCgi/addCgi"
   ],
   "window":{
+    "backgroundColor":"#F6F6F6",
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarBackgroundColor": "#F6F6F6",
+    "navigationBarTitleText": "Wafer Quick Start",
     "navigationBarTextStyle":"black"
   }
 }
