增加本地服务调试，新增admin

--- a/client/app.json
+++ b/client/app.json
@@ -1,9 +1,9 @@
 {
   "pages":[
-    "pages/index/index",
+    "pages/admin/admin",
     "pages/home/home",
     "pages/details/details",
-    
+    "pages/index/index",
     "pages/addCgi/addCgi"
   ],
   "window":{
