--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,12 @@
         "mkdir-p": "0.0.7",
         "mysql": "^2.14.1",
         "pify": "^2.3.0",
+        "sqlite3": "^3.1.13",
         "wafer-node-sdk": "^1.1.1"
     },
     "devDependencies": {
         "babel-eslint": "^7.1.0",
+        "babel-preset-es2015": "^6.24.1",
         "debug": "^2.6.8",
         "eslint": "^3.9.1",
         "eslint-config-standard": "^6.2.1",
